--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AngularJS Contents</title>
 </head>
+
 <body>
     <h1>AngularJS Contents</h1>
+    <h2>Resources</h2>
+    <ul>
+        <li><a href="https://angularjs.org/">AngularJS Org</a></li>
+    </ul>
 </body>
+
 </html>
