--- a/angular-work/w3Schools-angular/0-hello/index.html
+++ b/angular-work/w3Schools-angular/0-hello/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <title>0-Hello</title>
 </head>
+
 <body>
+
+    <h1>0-Hello Example</h1>
     <div ng-app="">
         <p>Name: <input type="text" ng-model="name"></p>
         <h1>Hello {{name}}</h1>
     </div>
 </body>
+
 </html>
