chore: update resources

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>AngularJS Contents</h1>
     <h2>Resources</h2>
     <ul>
-        <li><a href="https://angularjs.org/">AngularJS Org</a></li>
+        <li href="https://www.w3schools.com/angular/angular_intro.asp">Unfinished: angular intro</li>
     </ul>
 </body>
 
