--- a/angular-notes/angular-overview.html
+++ b/angular-notes/angular-overview.html
@@ -16,7 +16,7 @@
                 <h1>AngularJS Overview</h1>
                 <ul>
                     <li>AngularJS extends HTML with new attributes.</li>
-                    <li>AngularJS is perfect for Single Page Applications (SPAs)</li>
+                    <li>AngularJS is application-design framrwork and development platform for creating efficient single page applications (SPAs)</li>
                 </ul>
                 <h2>AngularJS is a JavaScript Framework</h2>
                 <ul>
